# pymath_compute

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish_on_push.yaml
docs/: documentation.html  index.html  server.py  styles.css
docs/documentation/: basic-usage.html  index.html  math-expressions.html  math-functions.html  styles.css
pymath_compute/: __init__.py
pymath_compute/model/: __init__.py  expression.py  function.py  types.py  variable.py
tests/: __init__.py  conftest.py
tests/pymath_compute/model/: test_expression.py  test_function.py  test_variable.py
