[tool.poetry]
name = "pymath_compute"
version = "0.1.0"
description = ""
authors = ["ricardoleal20 <rick.leal420@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10, <3.13"
numpy = ">=1.26.4"
scipy = ">=1.13.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
