[tool.poetry]
name = "pymath_compute"
version = "0.1.0"
description = "Tool to handle mathematical operations using Variables and Mathematical Expressions."
authors = ["ricardoleal20 <rick.leal420@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10, <3.13"
numpy = ">=1.26.4"
scipy = ">=1.13.1"

[tool.poetry.dev-dependencies]
pytest = "~=8.2.2"
pytest-cov = "~=5.0"
pytest-xdist = "~=3.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
